# parallel-diagnose

./: .gitignore  CMakeLists.txt  README.md  configure.sh  run.sh
diagnose/: CMakeLists.txt  diagnose.cpp  diagnose.hpp
docs/article/: article.tex
samples/: CMakeLists.txt  australia-colors.cpp  send-more-money.cpp
test/: CMakeLists.txt  australia_colors_conflict_test.cpp  color_diagnose_test.cpp  hellotest.cpp  performance_test.cpp  usa_colors_conflict_test.cpp
